Revert "book ticket by user function"
This reverts commit faaa1dfcb34caffb657e1e376f9b615430758bc1.